[package]
name = "tokenizers"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
tokenizers = { version="0.13.2", default-features=false, features = ["unstable_wasm"]}
js-sys = "0.3.61"
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "s"